--- a/se7ati_project/se7ati_app/templates/includes/sidebar.html
+++ b/se7ati_project/se7ati_app/templates/includes/sidebar.html
@@ -1,214 +1,282 @@
 {%load static%}
 <aside
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-white border-r border-gray-200 sm:translate-x-0"
+  class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-gradient-to-b from-white to-blue-50 border-r border-blue-100 shadow-sm sm:translate-x-0"
   aria-label="Sidebar"
 >
-  <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
-    <ul class="space-y-2 font-medium">
+  <div class="h-full px-3 pb-4 overflow-y-auto">
+    <ul class="space-y-1.5 font-medium">
+      <!-- Dashboard -->
       <li>
         <a
-          href="{% url 'chercher_pharmacies_view' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100"
+          href="{% url 'home' %}"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg group hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300"
         >
-          <svg
-            class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-blue-100 text-blue-600 mr-2"
           >
-            <path
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
               stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M6 4h12M6 4v16M6 4H5m13 0v16m0-16h1m-1 16H6m12 0h1M6 20H5M9 7h1v1H9V7Zm5 0h1v1h-1V7Zm-5 4h1v1H9v-1Zm5 0h1v1h-1v-1Zm-3 4h2a1 1 0 0 1 1 1v4h-4v-4a1 1 0 0 1 1-1Z"
-            />
-          </svg>
-
-          <span class="ms-3">Pharmacy</span>
-        </a>
-      </li>
-      <li>
-        <a
-          href="{% url 'diabetes_predicton' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-          <svg
-            class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 18"
-          >
-            <path
-              d="M6.143 0H1.857A1.857 1.857 0 0 0 0 1.857v4.286C0 7.169.831 8 1.857 8h4.286A1.857 1.857 0 0 0 8 6.143V1.857A1.857 1.857 0 0 0 6.143 0Zm10 0h-4.286A1.857 1.857 0 0 0 10 1.857v4.286C10 7.169 10.831 8 11.857 8h4.286A1.857 1.857 0 0 0 18 6.143V1.857A1.857 1.857 0 0 0 16.143 0Zm-10 10H1.857A1.857 1.857 0 0 0 0 11.857v4.286C0 17.169.831 18 1.857 18h4.286A1.857 1.857 0 0 0 8 16.143v-4.286A1.857 1.857 0 0 0 6.143 10Zm10 0h-4.286A1.857 1.857 0 0 0 10 11.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 18 16.143v-4.286A1.857 1.857 0 0 0 16.143 10Z"
-            />
-          </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Diabetes Risk Prediction</span>
-          
-        </a>
-      </li>
-      <li>
-        <a
-          href="#"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-          <svg
-            class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 18 18"
-          >
-            <path
-              d="m17.418 3.623-.018-.008a6.713 6.713 0 0 0-2.4-.569V2h1a1 1 0 1 0 0-2h-2a1 1 0 0 0-1 1v2H9.89A6.977 6.977 0 0 1 12 8v5h-2V8A5 5 0 1 0 0 8v6a1 1 0 0 0 1 1h8v4a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-4h6a1 1 0 0 0 1-1V8a5 5 0 0 0-2.582-4.377ZM6 12H4a1 1 0 0 1 0-2h2a1 1 0 0 1 0 2Z"
-            />
-          </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Inbox</span>
-          
-        </a>
-      </li>
-      <li>
-        <a
-          href="#"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-          <svg
-            class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 18"
-          >
-            <path
-              d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"
-            />
-          </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Users</span>
-        </a>
-      </li>
-      <li>
-        <a
-          href="{% url 'chat_home' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-          <svg
-            class="w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M10 0C4.486 0 0 4.486 0 10s4.486 10 10 10 10-4.486 10-10S15.514 0 10 0zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
-            />
-            <path
-              d="M10 4C7.794 4 6 5.794 6 8s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
-            />
-          </svg>
-          <span class="ms-3">Chat</span>
-        </a>
-      </li>
-      <li>
-        <a
-          href="{% url 'chat_bot' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-        <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-          <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
-        </svg>
-        
-            <path
-              d="M10 0C4.486 0 0 4.486 0 10s4.486 10 10 10 10-4.486 10-10S15.514 0 10 0zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
-            />
-            <path
-              d="M10 4C7.794 4 6 5.794 6 8s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
-            />
-          </svg>
-          <span class="ms-3">Ai Assistant</span>
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+              />
+            </svg>
+          </div>
+          <span>Dashboard</span>
         </a>
       </li>
 
+      <!-- Glucose Stats -->
       <li>
         <a
           href="{% url 'glucoseLevel' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300 group"
         >
-        <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v15a1 1 0 0 0 1 1h15M8 16l2.5-5.5 3 3L17.273 7 20 9.667"/>
-        </svg>
-        
-          <span class="ms-3">Statistique</span>
-        </a>
-      </li>
-      <li>
-        <a
-          href="{% url 'search_doctor' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-        <svg class="w-6 h-6  text-gray-500 transition duration-75 group-hover:text-gray-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-          <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"/>
-        </svg>
-        
-        
-          <span class="ms-3">Search Doctor</span>
-        </a>
-      </li>
-      <li>
-        <a
-          href="#"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
-        >
-          <svg
-            class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 18 20"
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-cyan-100 text-cyan-600 mr-2"
           >
-            <path
-              d="M17 5.923A1 1 0 0 0 16 5h-3V4a4 4 0 1 0-8 0v1H2a1 1 0 0 0-1 .923L.086 17.846A2 2 0 0 0 2.08 20h13.84a2 2 0 0 0 1.994-2.153L17 5.923ZM7 9a1 1 0 0 1-2 0V7h2v2Zm0-5a2 2 0 1 1 4 0v1H7V4Zm6 5a1 1 0 1 1-2 0V7h2v2Z"
-            />
-          </svg>
-          <span class="flex-1 ms-3 whitespace-nowrap">Sign Up</span>
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
+              />
+            </svg>
+          </div>
+          <span>Glucose Statistics</span>
         </a>
       </li>
 
+      <!-- Diabetes Risk -->
+      <li>
+        <a
+          href="{% url 'diabetes_predicton' %}"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300 group"
+        >
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-purple-100 text-purple-600 mr-2"
+          >
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+              />
+            </svg>
+          </div>
+          <span>Diabetes Risk Assessment</span>
+        </a>
+      </li>
+
+      <!-- Health Tools Section -->
+      <li class="pt-4 pb-2">
+        <div class="px-3">
+          <p
+            class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
+          >
+            Health Tools
+          </p>
+        </div>
+      </li>
+
+      <!-- AI Assistant -->
+      <li>
+        <a
+          href="{% url 'chat_bot' %}"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300 group"
+        >
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-emerald-100 text-emerald-600 mr-2"
+          >
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+              />
+            </svg>
+          </div>
+          <span>AI Health Assistant</span>
+        </a>
+      </li>
+
+      <!-- Pharmacy -->
+      <li>
+        <a
+          href="{% url 'chercher_pharmacies_view' %}"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300"
+        >
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-red-100 text-red-600 mr-2"
+          >
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"
+              />
+            </svg>
+          </div>
+          <span>Find Pharmacy</span>
+        </a>
+      </li>
+
+      <!-- Search Doctor -->
+      <li>
+        <a
+          href="{% url 'search_doctor' %}"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300 group"
+        >
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-amber-100 text-amber-600 mr-2"
+          >
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+              />
+            </svg>
+          </div>
+          <span>Search Doctor</span>
+        </a>
+      </li>
+
+      <!-- Communication Section -->
+      <li class="pt-4 pb-2">
+        <div class="px-3">
+          <p
+            class="text-xs font-semibold text-gray-400 uppercase tracking-wider"
+          >
+            Communication
+          </p>
+        </div>
+      </li>
+
+      <!-- Chat -->
+      <li>
+        <a
+          href="{% url 'chat_home' %}"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300 group"
+        >
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-blue-100 text-blue-600 mr-2"
+          >
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
+              />
+            </svg>
+          </div>
+          <span>Messages</span>
+        </a>
+      </li>
+
+      <!-- Chat Patient -->
       <li>
         <a
           href="{% url 'room' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300 group"
         >
-          <svg
-            class="w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 20"
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-indigo-100 text-indigo-600 mr-2"
           >
-            <path
-              d="M10 0C4.486 0 0 4.486 0 10s4.486 10 10 10 10-4.486 10-10S15.514 0 10 0zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
-            />
-            <path
-              d="M10 4C7.794 4 6 5.794 6 8s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
-            />
-          </svg>
-          <span class="ms-3">Chat Patient</span>
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z"
+              />
+            </svg>
+          </div>
+          <span>Patient Chat</span>
         </a>
       </li>
+
+      <!-- Video Call -->
       <li>
         <a
           href="{% url 'video_call' %}"
-          class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100 group"
+          class="flex items-center p-2.5 text-gray-800 rounded-lg hover:bg-gradient-to-r hover:from-blue-50 hover:to-cyan-50 transition-all duration-300 group"
         >
-          <svg class="w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 16a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z"/>
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12a9 9 0 1 0 18 0 9 9 0 0 0-18 0Z"/>
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3"/>
-          </svg>
-          <span class="ms-3">Video Call</span>
+          <div
+            class="flex items-center justify-center w-8 h-8 rounded-lg bg-teal-100 text-teal-600 mr-2"
+          >
+            <svg
+              class="w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"
+              />
+            </svg>
+          </div>
+          <span>Video Consultation</span>
         </a>
       </li>
     </ul>
