--- a/se7ati_project/se7ati_app/templates/chat_Bot/chat_with_user.html
+++ b/se7ati_project/se7ati_app/templates/chat_Bot/chat_with_user.html
@@ -59,7 +59,7 @@
     <form id="chat-form" class="mt-4">
         {% csrf_token %}
       <!-- Chat Input -->
-      <footer class="bg-white border-t border-gray-300 p-4 absolute bottom-0 w-3/4">
+      <footer class="bg-white border-t border-gray-300 p-4 absolute bottom-0 w-3/4 ml-20">
           <div class="flex items-center">
               <input type="text" id="message-input"  placeholder="Type a message..." class="w-full p-2 rounded-md border border-gray-400 focus:outline-none focus:border-blue-500">
               <button class="bg-indigo-500 text-white px-4 py-2 rounded-md ml-2">Send</button>
